[gd_scene load_steps=8 format=2]

[ext_resource path="res://GodotCredits.gd" type="Script" id=1]
[ext_resource path="res://BitPotionExt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Middle.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://music/lost1.2_wav/Anormal - calming - ambient.wav" type="AudioStream" id=4]
[ext_resource path="res://FadeINOUT.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 3 )

[node name="GodotCredits" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="CreditsContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="Label" parent="CreditsContainer"]
anchor_right = 1.0
margin_top = 1080.0
margin_bottom = 1094.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Credits line"
align = 1

[node name="Label" type="Label" parent="CreditsContainer"]
margin_left = 38.0
margin_top = 237.0
margin_right = 949.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.737255, 0, 1 )
text = "fall - knight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="FadeINOUT" parent="." instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="FadeINOUT"]
